[gd_scene load_steps=2 format=3 uid="uid://cjt0tkkrfpo4n"]

[ext_resource type="Script" path="res://home/game_options.gd" id="1_o6cjf"]

[node name="Game Options" type="CanvasLayer"]
script = ExtResource("1_o6cjf")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_top = 29.0
offset_right = 54.0
offset_bottom = 59.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Game - Settings"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_top = 40.0
offset_right = 540.0
offset_bottom = 556.0
grow_horizontal = 2

[node name="General" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="VirtualJoystickButton" type="Button" parent="TabContainer/General"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1080.0
offset_bottom = 48.0
grow_horizontal = 0
flat = true

[node name="Label" type="Label" parent="TabContainer/General/VirtualJoystickButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 254.0
offset_bottom = 15.0
grow_vertical = 2
text = "Virtual Joystick"

[node name="Label2" type="Label" parent="TabContainer/General/VirtualJoystickButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
text = "disenabled"
horizontal_alignment = 2

[node name="ContentScaleFactorButton" type="Button" parent="TabContainer/General"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1080.0
offset_top = 48.0
offset_bottom = 96.0
grow_horizontal = 0
flat = true

[node name="Label" type="Label" parent="TabContainer/General/ContentScaleFactorButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 173.0
offset_bottom = 15.0
grow_vertical = 2
text = "GUI Scale"

[node name="Label2" type="Label" parent="TabContainer/General/ContentScaleFactorButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -15.0
offset_right = -187.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
text = "idk"
horizontal_alignment = 2

[node name="ContentScaleFactorSlider" type="HSlider" parent="TabContainer/General/ContentScaleFactorButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -8.0
offset_right = -20.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
min_value = 0.1
max_value = 3.0
step = 0.1
value = 0.1

[node name="ResetConfigButton" type="Button" parent="TabContainer/General"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -252.0
offset_top = -38.0
grow_horizontal = 0
grow_vertical = 0
flat = true

[node name="Label" type="Label" parent="TabContainer/General/ResetConfigButton"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -252.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.85098, 0.0156863, 0.160784, 1)
text = "Reset Config"

[node name="Back" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_top = 569.0
offset_right = -232.0
offset_bottom = 632.0
grow_horizontal = 2
text = "Back"

[node name="Save" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 258.0
offset_top = 569.0
offset_right = 540.0
offset_bottom = 632.0
grow_horizontal = 2
disabled = true
text = "Apply"

[connection signal="pressed" from="TabContainer/General/VirtualJoystickButton" to="." method="_on_virtual_joystick_button_pressed"]
[connection signal="value_changed" from="TabContainer/General/ContentScaleFactorButton/ContentScaleFactorSlider" to="." method="_on_content_scale_factor_slider_value_changed"]
[connection signal="pressed" from="TabContainer/General/ResetConfigButton" to="." method="_on_reset_config_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
